back daan nga code with small security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=demo
-spring.data.mongodb.uri=mongodb+srv://argiepomento_db_user:fC8Zyy39LtZxJaPB@capstonebackend.6qbu4fa.mongodb.net/CapstoneDb?retryWrites=true&w=majority&ssl=true
-#spring.data.mongodb.database=
-#
+spring.data.mongodb.uri=${MONGODB_URI}
 #spring.data.mongodb.uri=mongodb://localhost:27017/capstonedb
